unpack/tests/snapshots/can_extract_format@[zip]-[archive.zip]-2.snap
---
source: unpack/tests/extract_test.rs
expression: get_files_from_folder(&destination_folder)
---
[
    "[DYNAMIC-PATH]/boycho.txt",
]
