unpack/tests/snapshots/can_extract_to_folder@[level]-[2].snap
---
source: unpack/tests/extract_test.rs
expression: get_files_from_folder(&destination_folder)
---
[
    "[DYNAMIC-PATH]/archive.zip/corsarm.txt",
    "[DYNAMIC-PATH]/archive.zip/zothy.txt",
    "[DYNAMIC-PATH]/folder-1/archive.zip/adequil",
    "[DYNAMIC-PATH]/folder-1/archive.zip/kizle.json",
    "[DYNAMIC-PATH]/folder-2/archive.zip/__inner-compressed-x1.zip__/inner-compressed-x1/avention.json",
    "[DYNAMIC-PATH]/folder-2/archive.zip/__inner-compressed-x1.zip__/inner-compressed-x1/inner-compressed-x2.zip",
    "[DYNAMIC-PATH]/folder-2/archive.zip/inner-compressed-x1.zip",
    "[DYNAMIC-PATH]/folder-2/archive.zip/skewintenk.txt",
]
