unpack/tests/snapshots/can_extract_to_folder@[level]-[3]-2.snap
---
source: unpack/tests/extract_test.rs
expression: results
---
[
    UnpackStatus {
        path: "[DYNAMIC-PATH]/folder-2/archive.zip/__inner-compressed-x1.zip__/inner-compressed-x1/inner-compressed-x2.zip",
        err: None,
    },
    UnpackStatus {
        path: "[DYNAMIC-PATH]/folder-2/archive.zip/inner-compressed-x1.zip",
        err: None,
    },
    UnpackStatus {
        path: "tests/mocks/multiple/archive.zip",
        err: None,
    },
    UnpackStatus {
        path: "tests/mocks/multiple/folder-1/archive.zip",
        err: None,
    },
    UnpackStatus {
        path: "tests/mocks/multiple/folder-2/archive.zip",
        err: None,
    },
]
