unpack/tests/snapshots/can_extract_with_unpack_level@[level]-[2]-2.snap
---
source: unpack/tests/extract_test.rs
expression: results
---
[
    UnpackStatus {
        archive_file: "[DYNAMIC-PATH]/folder-2/__$archive.zip$__/inner-compressed-x1.zip",
        extract_to: Some(
            "[DYNAMIC-PATH]/folder-2/__$archive.zip$__/__$inner-compressed-x1.zip$__",
        ),
        err: None,
    },
    UnpackStatus {
        archive_file: "tests/mocks/multiple/archive.zip",
        extract_to: Some(
            "[DYNAMIC-PATH]/__$archive.zip$__",
        ),
        err: None,
    },
    UnpackStatus {
        archive_file: "tests/mocks/multiple/folder-1/archive.zip",
        extract_to: Some(
            "[DYNAMIC-PATH]/folder-1/__$archive.zip$__",
        ),
        err: None,
    },
    UnpackStatus {
        archive_file: "tests/mocks/multiple/folder-2/archive.zip",
        extract_to: Some(
            "[DYNAMIC-PATH]/folder-2/__$archive.zip$__",
        ),
        err: None,
    },
]
